2004-??-??	The Opie Team <opie@handhelds.org>

	* Added four themes courtesy Robert Griebl (http://www.softforge.de/zstyle)
	* Added Conversion tool for pim-data (eilers)
	* Modifcation of the PIM API for providing generic use of OPimRecords. (eilers)

2004-25-04	The Opie Team <opie@handhelds.org>

	* Released as Version 1.1.3 (devel)
	* Introduced first implementation of SQL-Support using SQLite (eilers)
	* Added a new Gutenberg Project reader app - opie-gutenbrowser (ljp)
	* Added a real system graffiti character set (brad)
	* Added Generic Keyconfig Widget (zecke)
	* Improved Screenshotapplet and Drawpad integration. You can now open a screenshot in drawpad and take notes (zecke)
	* Added new Bible reader app - opie-dagger (drw)
	* Added a new Image Viewer. Work is ongoing (zecke,alwin)
	* Added namespace usage in libopie2 and everywhere (zecke,alwin)
	* Enabled the possibility to pass command line arguments to applications (mickeyl)
	* Added an about applet showing some credits and information about Opie (mickeyl)
	* Added benchmarking functionality to sysinfo (mickeyl)
	* Added applet and configuration application for switching hardware keyboard layouts (alwin)
	* Ported applications from libopie1 to libopie2* (drw,ar,alwin)
	* Imported fullscreen and font improvements from the Qkonsole fork to embeddedkonsole (waspe)
	* Clean-up of package information in control files (drw)
	* Repaired mediummount which was broken since integrating the quicklauncher (alwin)
	* Improved big-screen support (zecke,ar)
	* Improved multikeyboard support, added keyboard layout switching applet (mouse)
	* Added a new mail client based on libetpan (harlekin,alwin,jgf)
	* Added new package manager - opie-packagemanager (drw)
	* Improved light-n-power for C7x0 (mickeyl)
	* Added automatic rotation support for C7x0 (treke)
	* Split libopie1 up into a set of smaller - functionally grouped - libraries (mickeyl)