@@ -16,5 +16,4 @@
 #include <opie2/oapplicationfactory.h>
 
 using namespace Opie::Core;
-using namespace Opie::Core;
 OPIE_EXPORT_APP( OApplicationFactory<DrawPad> )
