@@ -1,5 +1,6 @@
 2004-??-??	The Opie Team <opie@handhelds.org>
 
+	* Fixed Drawpad initialization (Bug #1314) (mickeyl)
 	* Added four themes courtesy Robert Griebl (http://www.softforge.de/zstyle)
 	* Added Conversion tool for pim-data (eilers)
 	* Modifcation of the PIM API for providing generic use of OPimRecords. (eilers)
